; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/quartz/extr_waveparser.c_WAVEParser_QueryAccept.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/quartz/extr_waveparser.c_WAVEParser_QueryAccept.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@MEDIATYPE_Stream = common dso_local global i32 0, align 4
@S_FALSE = common dso_local global i32 0, align 4
@MEDIASUBTYPE_WAVE = common dso_local global i32 0, align 4
@S_OK = common dso_local global i32 0, align 4
@MEDIASUBTYPE_AU = common dso_local global i32 0, align 4
@MEDIASUBTYPE_AIFF = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"AU and AIFF files not supported yet!\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.TYPE_3__*)* @WAVEParser_QueryAccept to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @WAVEParser_QueryAccept(i32 %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %5, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 1
  %8 = call i64 @IsEqualIID(i32* %7, i32* @MEDIATYPE_Stream)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %12, label %10

10:                                               ; preds = %2
  %11 = load i32, i32* @S_FALSE, align 4
  store i32 %11, i32* %3, align 4
  br label %33

12:                                               ; preds = %2
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = call i64 @IsEqualIID(i32* %14, i32* @MEDIASUBTYPE_WAVE)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %12
  %18 = load i32, i32* @S_OK, align 4
  store i32 %18, i32* %3, align 4
  br label %33

19:                                               ; preds = %12
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = call i64 @IsEqualIID(i32* %21, i32* @MEDIASUBTYPE_AU)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %29, label %24

24:                                               ; preds = %19
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  %27 = call i64 @IsEqualIID(i32* %26, i32* @MEDIASUBTYPE_AIFF)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %31

29:                                               ; preds = %24, %19
  %30 = call i32 @FIXME(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  br label %31

31:                                               ; preds = %29, %24
  %32 = load i32, i32* @S_FALSE, align 4
  store i32 %32, i32* %3, align 4
  br label %33

33:                                               ; preds = %31, %17, %10
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local i64 @IsEqualIID(i32*, i32*) #1

declare dso_local i32 @FIXME(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
